# code-collections

./: .gitignore  CHANGELOG.md  README.md  copyright.js  image2movie.py  image2movie2.py  image2movie3.py  image2movie4.py  lynda.md  monitor.go  nav.md  node-axios-upload-file.js  npm-pack.md  package.json  posthtml.md  regex.js
11ty-js-animation/: .eleventy.js  circle.njk  index.njk  picker-3d-test.njk  picker-3d.njk  readme.md  shake.njk  swiper.njk  swiperjs.njk  swiperjs2.njk
ES6-React-Demo/: README.md
Go-Study/: README.md  array.go  atomic-counters.go  channel-buffering.go  channel-directions.go  channel-synchronization.go  channels.go  closing-channels.go  closures.go  errors.go  for.go  function.go  goroutines.go  hello-world.go  if-else.go  interface.go  map.go  methods.go  multiple-return-values.go  mutexes.go  non-blocking-channel-operation.go  pointers.go  range.go  rate-limiting.go  recursion.go  select.go  slices.go  structs.go  switch.go  tickers.go  timeouts.go  timers.go  values.go  variables.go  variadic-function.go  worker-pools.go
MapBoxGLJS-Demo/: README.md
Markdown/: README.md
MaterialUI-Demo/: README.md  package.json
React-Native-Study/: README.md
Swift-Study/: README.md  note.md
Typescript-Study/: .gitignore  README.md  gulpfile.js  note.md  package.json  tslint.json
UnitTest-Mocha/: README.md  package.json
angular-study/: package.json
ast/: README.md
babel-dynamic-import-node-demo/: index.js  package-lock.json  (+2 more)
python/audio_service/: .gitignore  README.md  main.py  pyproject.toml
python/audio_service/app/: tasks.py
(+2722 files in other folders)
