[project]
name = "audio-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.115.13",
    "ffmpeg-normalize>=1.32.5",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "ruff>=0.12.0",
    "uvicorn>=0.34.3",
]
